fix: fix slider no visible bcs overhlow hidden

--- a/src/styles/PokemonInfoStyles/_pokemoninfo.scss
+++ b/src/styles/PokemonInfoStyles/_pokemoninfo.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   gap: 2.6rem;
+  overflow: hidden;
 }
 .titles {
   display: flex;
